--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>FeedApp</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
+    <meta
+      name="description"
+      content="Empower your voice and make every vote count with our interactive polling app.
+       Create, vote on, and explore polls with ease. Join the community of active participants today and be part of the conversation."
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7b42bd" />
+    <meta name="msapplication-TileColor" content="#7b42bd" />
+    <meta name="theme-color" content="#e5dfec" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet" />
-    <title>Vite - Vue 3</title>
   </head>
   <body>
     <div id="app"></div>
